<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="?android:attr/homeAsUpIndicator">

        <TextView
            android:id="@+id/text_toolbar_title"
            android:scrollbars="horizontal"
            android:singleLine="true"
            android:ellipsize="none"
            android:maxWidth="200dp"
            style="@style/ChatRoom.ChatName.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Product Team" />

    </androidx.appcompat.widget.Toolbar>

</com.google.android.material.appbar.AppBarLayout>