...
                    app:layout_constraintStart_toEndOf="@+id/image_avatar"
                    app:layout_constraintTop_toBottomOf="@+id/text_display_name"
                    tools:text="online" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/text_contact_us"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="?colorSettingsSecondaryBackground"
                android:fontFamily="sans-serif-medium"
                android:foreground="?selectableItemBackground"
...
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_change_theme" />

            <TextView
                android:id="@+id/text_review_this_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?colorSettingsSecondaryBackground"
                android:fontFamily="sans-serif-medium"
                android:foreground="?selectableItemBackground"
                android:paddingStart="16dp"
...
