<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".sortingandgrouping.ui.SortingAndGroupingBottomSheetFragment">

    <TextView
        android:id="@+id/text_sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/msg_sort_by_placeholder"
        android:textColor="?colorBottomSheetFragmentText"
        android:textSize="17sp"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?colorDivider" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_filter_20dp"
                android:drawablePadding="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/msg_sort_by_name"
                android:textColor="?colorBottomSheetFragmentHeading"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_activity_20dp"
                android:drawablePadding="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/msg_sort_by_activity"
                android:textColor="?colorBottomSheetFragmentHeading"
                android:textSize="16sp"
                android:textStyle="normal" />

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?colorDivider" />

            <TextView
                android:id="@+id/text_unread_on_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_unread_20dp"
                android:drawablePadding="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/msg_group_by_unread_on_top"
                android:textColor="?colorBottomSheetFragmentHeading"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text_group_by_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_group_by_type_20dp"
                android:drawablePadding="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/msg_group_by_type"
                android:textColor="?colorBottomSheetFragmentHeading"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text_group_by_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_favorites_20dp"
                android:drawablePadding="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/msg_group_by_favorites"
                android:textColor="?colorBottomSheetFragmentHeading"
                android:textSize="16sp"
                android:textStyle="normal" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>