...

    <ImageView
        android:id="@+id/image_chat_icon"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_chat_name"
        app:layout_constraintStart_toEndOf="@+id/image_avatar"
        app:layout_constraintTop_toTopOf="@+id/text_chat_name"
        tools:src="@drawable/ic_hashtag_12dp" />

    <TextView
        android:id="@+id/text_chat_name"
...
